<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameLoopActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="150dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/newNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fullyellow"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/num"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@drawable/fullblack" />

        <TextView
            android:id="@+id/numberList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/exited_num"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@drawable/fullblack" />
    </LinearLayout>

    <TextView
        android:id="@+id/questionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questionTV"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/fragmentCont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTV">

        <Button
            android:id="@+id/player1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/player1_btn"
            android:textSize="40sp" />

        <Button
            android:id="@+id/player2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/player2_btn"
            android:textSize="40sp" />

        <Button
            android:id="@+id/player3_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/player3_btn"
            android:textSize="40sp" />

        <Button
            android:id="@+id/player4_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/player4_btn"
            android:textSize="40sp" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentCont"
        android:name="com.example.serverapplication.Fragment_STD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout="@layout/fragment__s_t_d" />

</androidx.constraintlayout.widget.ConstraintLayout>